refs #12 change logrus to zap, writing logs to rolling files
